welcome.lessons.welcome.bat.bool1.CountTeen.scala.error
countTeen:13: error: method test has return statement; needs result type
    return 1
    ^countTeen:15: error: method test has return statement; needs result type
  else{return 0}
       ^